<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test9"
    tools:context=".ForgetPasswordActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:alpha="0.7"
        app:cardCornerRadius="60dp"
        app:contentPadding="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_user"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/user_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="phone"
                    android:textColor="#B43737"
                    android:textSize="18sp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_pwd"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pwd_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="#B43737"
                    android:textSize="18sp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pwd_resure_hint"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pwd_ensure_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="#B43737"
                    android:textSize="18sp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/reset_agrement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/garement_register" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/register_card_login"
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="30dp">

                        <TextView
                            android:id="@+id/reset_textview_login"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="#7A00BCD4"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:text="@string/login"
                            android:textSize="25sp"
                            android:textStyle="italic" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/register_card_register"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="30dp">

                        <TextView
                            android:id="@+id/reset_textview"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="#7A00BCD4"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:text="@string/pwdreset"
                            android:textSize="25sp" />
                    </androidx.cardview.widget.CardView>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>