<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backregister"
    tools:context=".RegisterActivity">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:alpha="0.4"
    app:contentPadding="30dp"
    app:cardCornerRadius="60dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/name_user"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/user_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="phone"
                android:textColor="#B43737"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/name_pwd"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/pwd_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#B43737"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/pwd_resure_hint"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/pwd_register_rensure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#B43737"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="请阅读相关协议"
            android:id="@+id/register_agrement"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.cardview.widget.CardView
                    android:layout_alignParentLeft="true"
                    android:id="@+id/register_card_login"
                    android:layout_width="90dp"
                    android:layout_marginLeft="30dp"
                    android:layout_height="50dp" >
                    <TextView
                        android:clickable="true"
                        android:id="@+id/register_textview_login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/login"
                        android:textStyle="italic"
                        android:background="#7A00BCD4"
                        android:gravity="center"
                        android:textSize="25sp"
                        android:focusable="true" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_alignParentEnd="true"
                    android:id="@+id/register_card_register"
                    android:layout_width="90dp"
                    android:layout_marginEnd="30dp"
                    android:layout_height="50dp">
                    <TextView
                        android:focusable="true"
                        android:clickable="true"
                        android:id="@+id/register_textview_register"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/register"
                        android:gravity="center"
                        android:background="#7A00BCD4"
                        android:textSize="25sp"/>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
</LinearLayout>