<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IntroduceActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_weight="1"
        android:background="@color/cardview_shadow_end_color"
        android:layout_margin="10dp"
        app:contentPadding="10dp"
        app:cardCornerRadius="30sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="联系方式"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#431818"/>

            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="@string/q_q"
                    android:textSize="16sp"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/qq_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="@string/weichat"
                    android:textSize="16sp"
                    android:gravity="center"/>
                <EditText
                    android:id="@+id/weixin_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="@string/wangyun"
                    android:textSize="16sp"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/yun_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        app:contentPadding="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="40dp"
        android:background="#572626">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="个人简介"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/person_introduce_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1"
        app:cardCornerRadius="40dp"
        android:layout_margin="10dp"
        app:contentPadding="10dp"
        android:background="#9F2D2D">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="20dp"
                android:textStyle="bold"
                android:text="心灵寄语"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_height="match_parent" />
            <EditText
                android:id="@+id/message_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/entermusic"
        android:background="@color/cardview_shadow_start_color"
        app:cardCornerRadius="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/entermusic"
            android:textSize="16sp"
            android:textStyle="italic"
            android:gravity="center"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>