<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Person_centerFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_weight="1">
        <TextView
            android:layout_marginRight="30sp"
            android:id="@+id/title_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="right"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:text="个人中心"/>
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/center_person"
            android:id="@+id/person_image"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/person_first2222"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:background="#DAD5D5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="联系方式"
                        android:textColor="#431818"
                        android:textSize="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/q_q"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/qq"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/weichat"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/weixin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/wangyun"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/yun"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/names"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/user_names"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:clickable="true"
                        android:focusable="true"
                        android:id="@+id/edit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="编辑"
                        android:textColor="#8C2727"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20dp" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        app:contentPadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/person_2"
        android:layout_weight="1"
        android:layout_margin="5dp"
        app:cardCornerRadius="40dp"
        android:background="#572626">

        <LinearLayout
            android:background="#DAD5D5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="个人简介"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:background="#A28F8F"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:id="@+id/person_introduce"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/person_first2"
        android:layout_weight="1"
        app:cardCornerRadius="40dp"
        android:layout_margin="5dp"
        app:contentPadding="10dp"
        android:background="#9F2D2D">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:background="#A1703232"
                android:layout_width="20dp"
                android:text="心灵寄语"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:id="@+id/a_message_from_the_heart"/>
            <TextView
                android:background="#C7BABA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/message"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>